Allowed window to resize to client browser size

--- a/index.htm
+++ b/index.htm
@@ -5,8 +5,7 @@
 		<script src="script.js"></script>
 	</head>
 	<body onload="run()">
-		<p>Temp Text</p>
+		<p>Top Text</p>
 		<canvas id="canvas" width="200" height="100" style="border:1px solid #000000;"></canvas>
-		<p>Footer Text</p>
 	</body>
 </html>
